add deploy to heroku

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,5 @@ sudo: false
 install: true
 script:
   - sh .travis/docker.sh
+after_success:
+  - test "$TRAVIS_BRANCH" = "master" && sh .travis/deploy_heroku.sh
