--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ install: true
 script:
   - sh .travis/docker.sh
 after_success:
-  - test "$TRAVIS_BRANCH" = "master" && sh .travis/deploy_heroku.sh
+  - test "$TRAVIS_BRANCH" = "master" && sh .travis/heroku.sh
